# bridle

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-07-08-integration-tests-design.md
homebrew/: bridle.rb
scripts/: release.sh
src/: adapters.rs  cli.rs  harness.rs  lib.rs  main.rs  mcp_config.rs  platform.rs  profile.rs  skills.rs  sync.rs
src/commands/: add.rs  discover.rs  import.rs  init.rs  list.rs  mod.rs  profile.rs  remove.rs  status.rs  sync.rs
tests/: cli.rs
